Add Vercel Speed Insights script and make minor improvements

--- a/pages/activities/index.html
+++ b/pages/activities/index.html
@@ -64,7 +64,7 @@
                     </div>
 
                     <div class="absolute top-4 left-4 bg-blue-600 text-white text-xs font-bold px-3 py-1 rounded">
-                        Mar 15
+                        April 15
                     </div>
                 </div>
 
@@ -98,13 +98,13 @@
                             </svg>
                         </div>
                         <div class="relative z-10 text-center px-6">
-                            <div class="text-white text-3xl font-bold mb-2">UNSW</div>
-                            <div class="text-purple-200">University of New South Wales</div>
+                            <div class="text-white text-3xl font-bold mb-2">NSW Startup Hub</div>
+                            <div class="text-purple-200">New South Wales Startup Hub</div>
                         </div>
                     </div>
 
                     <div class="absolute top-4 left-4 bg-purple-600 text-white text-xs font-bold px-3 py-1 rounded">
-                        Mar 22
+                        April 22
                     </div>
                 </div>
 
@@ -144,7 +144,7 @@
                     </div>
 
                     <div class="absolute top-4 left-4 bg-cyan-600 text-white text-xs font-bold px-3 py-1 rounded">
-                        Apr 05
+                        May 05
                     </div>
                 </div>
 
@@ -156,7 +156,7 @@
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
                         </svg>
-                        <span class="text-gray-300">Cultivate8 Innovation Center, Level 12</span>
+                        <span class="text-gray-300">Cultivate8 Innovation Center, Level 4</span>
                     </div>
 
                     <p class="text-gray-400 mb-6">A specialized masterclass for technical teams on integrating large language models into existing enterprise systems and workflows.</p>
@@ -200,17 +200,17 @@
                 <!-- Right Column (Content) -->
                 <div class="md:w-1/2 md:pl-8">
                     <!-- Mobile date - Visible only on small screens -->
-                    <div class="md:hidden text-gray-400 mb-1">February 18, 2025</div>
-                    <div class="md:hidden text-cyan-400 text-sm mb-2">University of Sydney</div>
+                    <div class="md:hidden text-gray-400 mb-1">9, April, 2025</div>
+                    <div class="md:hidden text-cyan-400 text-sm mb-2">University of Technology Sydney</div>
 
                     <div class="card-bg rounded-xl overflow-hidden">
                         <div class="h-48 bg-gradient-to-r from-blue-900 to-indigo-900 relative">
                             <div class="absolute inset-0 flex items-center justify-center">
-                                <img src="https://via.placeholder.com/800x400" alt="Workshop at University of Sydney" class="object-cover w-full h-full opacity-40">
+                                <img src="/Users/roi/Desktop/NerualLeap-Website-master-v2/schools/UTS/UTS-Logo-Syd.jpg" alt="Workshop at UTS" class="object-cover w-full h-full opacity-40">
                                 <div class="absolute inset-0 bg-gradient-to-r from-blue-900 to-indigo-900 opacity-60"></div>
                             </div>
                             <div class="absolute inset-0 flex items-center justify-center">
-                                <h3 class="text-white text-2xl font-bold text-center px-4">AI Safety for Computer Science Students</h3>
+                                <h3 class="text-white text-2xl font-bold text-center px-4">LLM-R1: How to use LLMs during research</h3>
                             </div>
                         </div>
 
