--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                         <h3 class="text-xl font-bold mb-2 neon-text">AI Safety & Ethics</h3>
                         <p class="text-gray-400 mb-4">Explore safety challenges in AI systems, ethical considerations, and best practices for building responsible AI.</p>
                         <div class="flex justify-between items-center">
-                            <span class="text-cyan-400 font-bold">$ 799</span>
+                            <span class="text-cyan-400 font-bold">$ 0</span>
                             <a href="/pages/coming-soon.html" class="neon-button text-sm px-3 py-1 rounded">
                                 View Details
                             </a>
@@ -1136,6 +1136,12 @@
             }
         });
     </script>
+
+    <!-- Vercel Analytics for performance monitoring -->
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+    <script defer src="_vercel/insights/script.js"></script>
 </body>
 </html>
 
