--- a/pages/about-us/index.html
+++ b/pages/about-us/index.html
@@ -82,6 +82,7 @@
         <div class="max-w-7xl mx-auto px-6 py-4">
             <div class="flex overflow-x-auto space-x-6 pb-2">
                 <button class="about-tab text-cyan-400 border-b-2 border-cyan-400 whitespace-nowrap px-4 py-3 font-medium text-base touch-manipulation" data-tab="purpose">Our Purpose</button>
+                <button class="about-tab text-gray-300 border-transparent whitespace-nowrap px-4 py-3 font-medium text-base touch-manipulation" data-tab="products">Our Products</button>
                 <button class="about-tab text-gray-300 border-transparent whitespace-nowrap px-4 py-3 font-medium text-base touch-manipulation" data-tab="team">Teaching Team</button>
                 <button class="about-tab text-gray-300 border-transparent whitespace-nowrap px-4 py-3 font-medium text-base touch-manipulation" data-tab="story">Company Story</button>
             </div>
@@ -225,6 +226,41 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Our Products Section -->
+    <div id="products-section" class="about-section hidden">
+        <div class="py-16 px-6">
+            <div class="max-w-7xl mx-auto">
+                <h1 class="text-4xl font-bold text-white mb-8">Our <span class="neon-text">Products</span></h1>
+                
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 mb-12">
+                    <!-- One-Click Street View -->
+                    <div class="card-bg rounded-xl overflow-hidden border border-gray-800 hover:border-cyan-400 transition-all duration-300">
+                        <div class="h-48 bg-gradient-to-br from-blue-900 to-purple-800 flex items-center justify-center overflow-hidden">
+                            <svg class="h-20 w-20 text-cyan-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2V9z"></path>
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M9 22V12h6v10"></path>
+                            </svg>
+                        </div>
+                        <div class="p-6">
+                            <h3 class="text-xl font-bold text-white mb-3">One-Click Street View</h3>
+                            <p class="text-gray-300 mb-6">By inputting your address one time you can download the corresponding front image for your address easily!</p>
+                            <a href="/address-street-view/" class="bg-gradient-to-r from-blue-600 to-cyan-500 hover:from-blue-500 hover:to-cyan-400 text-white font-medium py-2 px-6 rounded-lg inline-flex items-center transition-all duration-300">
+                                Try Now
+                                <svg class="ml-2 h-5 w-5" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="text-center">
+                    <p class="text-xl text-gray-300">Other products & companies are coming soon!</p>
                 </div>
             </div>
         </div>
